# QConnectFour

./: CMakeLists.txt  README  ai.cpp  ai.h  board.cpp  board.h  boardwidget.cpp  boardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
